Estilizando layout responsivo

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 <body>
     <main class="container">
         <div class="principal">
-            <div class="imagem">
-                <img src="src/imagens/image-product-desktop.jpg" alt="Imagem de um frasco de perfume">
+            <div class="imagem desktop mobile">
+                
             </div>
 
             <div class="informacoes">
