--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
     </main>
 
     <div class="attribution">
-        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-        Coded by <a href="#" target="_blank">KarolToledo</a>.
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"><strong>Frontend Mentor</strong></a>.
+        Coded by <a href="#" target="_blank"><strong>KarolToledo</strong></a>.
     </div>
 </body>
 
