--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desafio Frontend Mentor</title>
+    <title>Desafio card-f-m</title>
     <link rel="shortcut icon" href="src/imagens/favicon-32x32.png" type="image/x-icon">
     <!-- CSS -->
     <link rel="stylesheet" href="src/css/reset.css">
@@ -23,7 +23,7 @@
     <main class="container">
         <div class="principal">
             <div class="imagem desktop mobile">
-                
+
             </div>
 
             <div class="informacoes">
@@ -39,7 +39,8 @@
                 </div>
 
 
-                <button class="botao"><img src="src/imagens/icon-cart.svg" alt="Carrinho de compras" class="carrinho">Add to Cart</button>
+                <button class="botao"><img src="src/imagens/icon-cart.svg" alt="Carrinho de compras"
+                        class="carrinho">Add to Cart</button>
 
             </div>
         </div>
@@ -47,7 +48,8 @@
     </main>
 
     <div class="attribution">
-        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"><strong>Frontend Mentor</strong></a>.
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"><strong>Frontend
+                Mentor</strong></a>.
         Coded by <a href="#" target="_blank"><strong>KarolToledo</strong></a>.
     </div>
 </body>
